[splash] refresh the splash/about page

--- a/drupal/modules/static/tpl/about.html
+++ b/drupal/modules/static/tpl/about.html
@@ -1,35 +1,30 @@
-<div class="row">
-    <div class="well">
-        <h3>What is Flukso?</h3>
-        <div class="clearfix">
-            <p>Flukso is an <a href="https://www.github.com/flukso">open source</a> web-based community metering application. Flukso allows you to accurately monitor and reduce your electricity, water and gas consumption via this website. Do not be fooled to think that you have to spend your evenings sitting in the dark with only a small candle to light your home in order to have a low energy consumption pattern. Instead, a significant amount of savings can be achieved through improvements in energy efficiency. Comparing your electricity usage to your peers' will help trigger conversations on how to achieve this. We firmly concur with the statement that energy efficiency is the best type of alternative energy.</p>
-        </div>
+<div class="hero row">
+    <div class="span12">
+        <img src='/sites/all/themes/framework/img/flukso.splash.png' width="480">
+        <p id="tag">rock-solid monitoring</p>
+        <p>accurate</p>
+        <p>non-intrusive installation</p>
+        <p>multi-utility</p>
+        <p>multiple networking options</p>
+        <p>offline capability</p>
+        <p>internal health checking</p>
+        <p>full data access through API</p>
     </div>
 </div>
-
-<div class="row">
-    <div class="well">
-        <h3>How does it work?</h3>
-        <div class="clearfix">
-            <p>In order to participate, you require a Fluksometer. You should <a href="https://www.flukso.net/installation">install</a> this device near your fuse box. It determines your total electricity consumption from a current clamp attached to one of the power cables. The Fluksometer also associates with your home ethernet or wifi network and reports the sensor readings at five minute intervals to the Flukso web server. The server stores the time series data, which can then be consulted via the web interface. When logged in, the website displays a personalised chart similar to the live chart shown on the <a href="/dash">dash page</a>. You're able to select different time scales, add or remove other Fluksonians' data sets to the chart and change the chart's unit. Flukso thus helps you visualise your household's energy streams.</p>
-        </div>
+<div class="opts row">
+    <div class="span4">
+        <h2>try</h2>
+        <p>Please take our demo account for a spin. Four sensors are monitoring this dwelling: electricty, water and gas consumption combined with solar panel generation.</p>
+        <p><a class="btn" href="/dash">Demo</a></p>
     </div>
-</div>
-
-<div class="row">
-    <div class="well">
-        <h3>What do I need?</h3>
-        <div class="clearfix">
-            <p>You will need an ethernet or wifi network for the Fluksometer to connect to. And a power socket close to the fuse box.</p>
-        </div>
+    <div class="span4">
+        <h2>buy</h2>
+        <p>Purchase a Fluksometer and matching current, water or gas probes through our web shop. We currently ship to all EU countries.<p/>
+        <p><a class="btn" href="/shop">Shop</a></p>
     </div>
-</div>
-
-<div class="row">
-    <div class="well">
-        <h3>Where can I buy a Fluksometer?</h3>
-        <div class="clearfix">
-            <p>You can purchase a Fluksometer from our <a href="https://www.flukso.net/shop">online store</a>. This includes a Fluksometer, cabling and unlimited access to the Flukso website. Depending on the number of phases, you will need to purchase one or three current clamps separately. We have to ship these boxes from Belgium to all EU countries. Shipping costs will vary depending on your location.</p>
-        </div>
+    <div class="span4">
+        <h2>get in touch</h2>
+        <p>Feel free to contact us if your project requires rock-solid monitoring.</p>
+        <p>Flukso bvba<br>J. Vandenbemptlaan 15<br>3001 Heverlee<br>Belgium<br>+32479281448<br>info@flukso.net</p>
     </div>
 </div>
