[about] small text change

--- a/drupal/modules/static/tpl/about.html
+++ b/drupal/modules/static/tpl/about.html
@@ -24,7 +24,7 @@
     </div>
     <div class="span4">
         <h2>get in touch</h2>
-        <p>Feel free to contact us if your project requires rock-solid monitoring.</p>
+        <p>Feel free to contact us if your project needs some rock-solid monitoring.</p>
         <p>Flukso bvba<br>J. Vandenbemptlaan 15<br>3001 Heverlee<br>Belgium<br>+32479281448<br>info@flukso.net</p>
     </div>
 </div>
