[install] improve linking to en/nl manuals

--- a/drupal/modules/static/tpl/install.html
+++ b/drupal/modules/static/tpl/install.html
@@ -1,6 +1,12 @@
-<div id="install-manual" class="row">
-    <a class="btn btn-large btn-success" href="https://www.flukso.net/files/docs/en/index.html">Flukso Manual (EN)</a>
-    <a class="btn btn-large btn-success" href="https://www.flukso.net/files/docs/nl/index.html">Flukso Handleiding (NL)</a>
+<div class="manual row">
+    <div class="well clearfix">
+        <div class="span3">
+            <p>This is the Flukso quick start. For detailed documentation we'd like to refer you to the online <a href="/files/docs/en/index.html">manual</a>.</p>
+        </div>
+        <div class="offset1 span3">
+            <p>Dit is de Flukso snelle start. Voor getailleerde documentatie verwijzen we je graag naar de online <a href="/files/docs/nl/index.html">handleiding</a>.</p>
+        </div>
+    </div>
 </div>
 
 <div class="install-step row">
